--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 section.sex {
     margin-top: 150px;
 }
-nav img{margin-right: 40px;}
+nav img{
+	margin-right: 25px;
+}
+
+ul link {
+	margin-right: 40px;
+}
